@@ -2,6 +2,8 @@ Nutch Change Log
 
 Nutch Current Development
 
+* NUTCH-1605 MIME type detector recognizes xlsx as zip file (snagel)
+
 * NUTCH-1802 Move TestbedProxy to test environment (jnioche)
 
 * NUTCH-1803 Put test dependencies in a separate lib dir (jnioche)
